tests/baselines/reference/YieldExpression8_es6.errors.txt
YieldExpression8_es6.ts(1,1): error TS2304: Cannot find name 'yield'.


==== YieldExpression8_es6.ts (1 errors) ====
    yield(foo);
    ~~~~~
!!! error TS2304: Cannot find name 'yield'.
    function* foo() {
      yield(foo);
    }